# ink-jump

./: LICENSE.txt  README.md
executable/data/: credits.txt  version.txt
executable/data/models/: object_arrow.md3z  object_wall.md3z
executable/data/shaders/: effect_canvas.frag  effect_canvas.vert  effect_dark.vert  effect_splat.frag  effect_splat.vert  object_arrow.vert  object_eye.frag  object_eye.vert  object_wall.frag  object_wall.vert  point.frag
executable/data/sounds/: jump.opus  stick.opus
material/: logo_inj.xcf
projects/cmake/: CMakeLists.txt
projects/visualstudio/: InkJump.sln  InkWall.sln
projects/visualstudio/configuration/: project.vcxproj
projects/visualstudio/configuration/windows/: manifest.xml  version.rc
source/: Arrow.cpp  Arrow.h  Canvas.cpp  Canvas.h  Game.cpp  Game.h  Interface.cpp  Interface.h  Level.cpp  Path.cpp  Path.h  Utilities.h  Wall.cpp  Wall.h  application.cpp  main.cpp  main.h
tools/: complete_repository.bat  complete_repository.sh
